--- a/scss/components/_dashboard-grid.scss
+++ b/scss/components/_dashboard-grid.scss
@@ -226,5 +226,5 @@ $box-shadow-card: 0 4px 6px -1px rgba(16, 24, 40, 0.1),
 .trending-item__project {
   color: $color-grey;
   font-size: $font-size-body-text;
-  margin-top: -$space-xs;
+  margin-top: -1px;
 }
