--- a/scss/components/_dashboard-grid.scss
+++ b/scss/components/_dashboard-grid.scss
@@ -37,6 +37,7 @@ $box-shadow-card: 0 4px 6px -1px rgba(16, 24, 40, 0.1),
 
 .section-title {
   font-size: $font-size-section-headings;
+  font-weight: 600;
   margin: 0;
 }
 
@@ -81,6 +82,7 @@ $box-shadow-card: 0 4px 6px -1px rgba(16, 24, 40, 0.1),
 
 .project-card__title {
   font-size: $font-size-card-title;
+  font-weight: 600;
 }
 
 .project-card__title-link {
